# Dirigent

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
examples/: cli_tool_design.py
src/dirigent/: __init__.py  cli.py  graph.py  orchestrator.py  runtime.py  state.py
src/dirigent/core/: __init__.py  agent.py  capability.py  channel.py  message.py  registry.py
src/dirigent/llm/: __init__.py  agent.py  config.py  copilot.py  copilot_provider.py  provider.py
src/dirigent/nodes/: architect.py  developer.py  reviewer.py
src/dirigent/observe/: __init__.py  metrics.py  trace.py
src/dirigent/patterns/: __init__.py  delegate.py  fanout.py  review.py
src/dirigent/utils/: display.py  git.py  repo.py  worktree.py
tests/: test_framework.py  test_integration.py  test_llm.py  test_nodes.py  test_repo.py  test_state.py
