[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirigent"
version = "0.1.0"
description = "Fan-out/fan-in AI agent orchestrator using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
dirigent = "dirigent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dirigent"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
